<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/postTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_post"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLength="256"
        android:layout_weight="1" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholderCounter"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/limitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_charlimit" />

    </LinearLayout>
    
    <EditText
        android:id="@+id/attachmentTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_attachment"
        android:inputType="textUri" />

    <CheckBox
        android:id="@+id/NSFWcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This post is Offensive/NSFW" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/title_subscribe"/>

    <EditText
        android:id="@+id/subscribeTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_subscribe"
        android:inputType="textEmailAddress" />

</LinearLayout>