<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nz.co.nickwebster.campfyre.MainActivity" >
    
    <item
        android:id="@+id/action_showNSFW"
        android:orderInCategory="30"
        android:title="@string/action_showNSFW"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_showCredits"
        android:orderInCategory="40"
        android:title="@string/action_showCredits"
        android:showAsAction="never"/>
    
    <!--  <item android:id="@+id/action_post" android:orderInCategory="1" android:icon="@drawable/ic_action_edit" android:title="@string/action_post" android:showAsAction="always|withText"></item> -->
    <item android:id="@+id/action_refresh" android:orderInCategory="20" android:icon="@drawable/ic_refresh_white_48dp" android:title="@string/action_refresh" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/action_search" android:orderInCategory="10" android:title="@string/action_search" android:icon="@drawable/ic_search_white_48dp" android:showAsAction="ifRoom"></item>

</menu>
