<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nz.co.nickwebster.campfyre.MainActivity" >

    <item
        android:id="@+id/action_subscribe"
        android:showAsAction="always"
        android:title="@string/action_subscribe" android:orderInCategory="10" android:titleCondensed="@string/action_subscribe_short"/>
    
    <item
        android:id="@+id/action_showall"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_showall"/>
   <!--  <item android:id="@+id/action_post" android:orderInCategory="1" android:icon="@drawable/ic_action_edit" android:title="@string/action_comment" android:showAsAction="always|withText"></item>-->

    <item android:id="@+id/action_refresh" android:orderInCategory="20" android:icon="@drawable/ic_action_refresh" android:title="@string/action_refresh" android:showAsAction="always" android:visible="true"></item>
</menu>
