<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/postRoboface"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/postText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/commentcountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/seperator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_seperator" />

            <TextView
                android:id="@+id/postRelTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/postAttachment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <View android:layout_height="1dp" android:layout_width="fill_parent" android:background="#eee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/action_stoke"
            android:id="@+id/stokeButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="15dp"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/action_share"
            android:id="@+id/shareButton"/>

        <Button
            android:id="@+id/attachmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="15dp"
            style="?android:attr/buttonStyleSmall"
            android:textColor="#ff6900"
            android:visibility="gone" />
    </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>